--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>Hangman-game</title>
-
+	<link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" type="text/css" />
 	<script src="hangman.js"></script>
 
